client/src/components/Map/style.css
.map_box_container {
    margin-top: -3.5em;
    margin-left: -7em;
}
.mapContainer {
    position: relative;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 23em;
    margin-top: 5em;
    margin-bottom: 2px;
    }

.sidebarStyle {
        display: inline-block;
        position: absolute;
        top: 53px;
        left: 0;
        margin: 12px;
        background-color: #404040;
        color: #ffffff;
        z-index: 1 !important;
        padding: 6px;
        font-weight: bold;
        opacity: 50%;
        }

.mapboxgl-papup {
        max-width: 400px;
        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
        }

